--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -21,7 +21,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up Docker
-        uses: docker/setup-buildx-action@v3
+        uses: docker/setup-buildx-action@v2
+
+      - name: Проверка токена
+        run: echo "${{ secrets.ACCESS_TOKEN }}" | cut -c1-10
 
       - name: Log in to DigitalOcean Docker Registry
         run: | 
