--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -23,21 +23,21 @@ jobs:
       - name: Set up Docker
         uses: docker/setup-buildx-action@v2
 
-      - name: Проверка токена
-        run: echo "${{ secrets.ACCESS_TOKEN }}" | cut -c1-10
-
       - name: Log in to DigitalOcean Docker Registry
         run: | 
           echo "${{ secrets.ACCESS_TOKEN }}" | docker login registry.digitalocean.com -u "docean" --password-stdin
 
+      - name: Проверка доступа к реестру
+        run: curl -v https://registry.digitalocean.com/v2/
+
       - name: Build Docker image
-        run: docker build -t registry.digitalocean.com/${{ env.REGISTRY_NAME }}/silkroad-app:latest .
+        run: docker build -t registry.digitalocean.com/silkroad-api/silkroad-app:latest .
 
       - name: Push Docker image to DigitalOcean Registry
-        run: docker push registry.digitalocean.com/${{ env.REGISTRY_NAME }}/silkroad-app:latest
+        run: docker push registry.digitalocean.com/silkroad-api/silkroad-app:latest
 
     outputs:
-      image_name: registry.digitalocean.com/${{ env.REGISTRY_NAME }}/silkroad-app
+      image_name: registry.digitalocean.com/silkroad-api/silkroad-app
       image_tag: latest
 
   deploy:
@@ -55,6 +55,6 @@ jobs:
           ssh -o StrictHostKeyChecking=no root@${{ secrets.DROPLET_IP }} << 'EOF'
             docker stop silkroad-app || true
             docker rm silkroad-app || true
-            docker pull registry.digitalocean.com/${{ env.REGISTRY_NAME }}/silkroad-app:latest
-            docker run -d --name silkroad-app -p 80:80 registry.digitalocean.com/${{ env.REGISTRY_NAME }}/silkroad-app:latest
+            docker pull registry.digitalocean.com/silkroad-api/silkroad-app:latest
+            docker run -d --name silkroad-app -p 80:80 registry.digitalocean.com/silkroad-api/silkroad-app:latest
           EOF
