--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,20 +3,17 @@ version: '3.8'
 services:
   silkroad-app:
     build: ./
-    command: ./wait-for-postgres.sh db ./silkroad
+    command: ./silkroad
     ports:
       - 8000:8000
-    depends_on:
-      - db
     environment:
+      - DB_HOST=${DB_HOST}
+      - DB_PORT=${DB_PORT}
+      - DB_NAME=${DB_NAME}
+      - DB_USERNAME=${DB_USERNAME}
       - DB_PASSWORD=${DB_PASSWORD}
-
-  db:
-    restart: always
-    image: postgres:latest
-    volumes:
-      - ./.database/data:/var/lib/postgresql/data
-    environment:
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-    ports:
-      - 5436:5432
+      - DB_SSLMODE=${DB_SSLMODE}
+      - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
+      - TELEGRAM_CHAT_ID=${TELEGRAM_CHAT_ID}
+    env_file:
+      - .env
