--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Log in to DigitalOcean Docker Registry
         run: |
-          echo "${{ secrets.ACCESS_TOKEN }}" | docker login registry.digitalocean.com -u docean --password-stdin
+          docker login registry.digitalocean.com -u docean -p ${{ secrets.ACCESS_TOKEN }}
 
       - name: Проверка доступа к реестру
         run: curl -v https://registry.digitalocean.com/v2/
