--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -11,6 +11,8 @@ on:
 
 env:
   REGISTRY_NAME: "silkroad-api"
+  IMAGE_NAME: "registry.digitalocean.com/silkroad-api/silkroad-app"
+  IMAGE_TAG: "latest"
 
 jobs:
   build:
@@ -27,18 +29,14 @@ jobs:
         run: |
           echo "${{ secrets.ACCESS_TOKEN }}" | docker login registry.digitalocean.com -u docean --password-stdin
 
-      - name: Проверка доступа к реестру
-        run: curl -v https://registry.digitalocean.com/v2/
-
-      - name: Build Docker image
-        run: docker build -t registry.digitalocean.com/silkroad-api/silkroad-app:latest .
-
-      - name: Push Docker image to DigitalOcean Registry
-        run: docker push registry.digitalocean.com/silkroad-api/silkroad-app:latest
+      - name: Build and Push Docker image
+        run: |
+          docker build -t ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }} .
+          docker push ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
 
     outputs:
-      image_name: registry.digitalocean.com/silkroad-api/silkroad-app
-      image_tag: latest
+      image_name: ${{ env.IMAGE_NAME }}
+      image_tag: ${{ env.IMAGE_TAG }}
 
   deploy:
     needs: build
@@ -52,11 +50,11 @@ jobs:
 
       - name: Deploy to DigitalOcean
         run: |
-          echo "${{ secrets.ACCESS_TOKEN }}" | docker login registry.digitalocean.com -u "docean" --password-stdin
           ssh -o StrictHostKeyChecking=no root@${{ secrets.DROPLET_IP }} << 'EOF'
+            set -e  # Остановить выполнение при любой ошибке
             docker stop silkroad-app || true
             docker rm silkroad-app || true
-            docker pull registry.digitalocean.com/silkroad-api/silkroad-app:latest
+            docker pull ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
             docker run -d --name silkroad-app -p 80:80 \
               -e DB_HOST=${{ secrets.DB_HOST }} \
               -e DB_PORT=${{ secrets.DB_PORT }} \
@@ -66,5 +64,5 @@ jobs:
               -e DB_SSLMODE=${{ secrets.DB_SSLMODE }} \
               -e TELEGRAM_BOT_TOKEN=${{ secrets.TELEGRAM_BOT_TOKEN }} \
               -e TELEGRAM_CHAT_ID=${{ secrets.TELEGRAM_CHAT_ID }} \
-              registry.digitalocean.com/silkroad-api/silkroad-app:latest
+              ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
           EOF
