--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,5 +15,7 @@ services:
       - DB_SSLMODE=${DB_SSLMODE}
       - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
       - TELEGRAM_CHAT_ID=${TELEGRAM_CHAT_ID}
+      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
     env_file:
       - .env
