--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -68,5 +68,6 @@ jobs:
               -e TELEGRAM_CHAT_ID=${{ secrets.TELEGRAM_CHAT_ID }} \
               -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
               -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
+              -e AWS_REGION=${{ secrets.AWS_REGION }} \
               ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
           EOF
